# analytics-engineering-with-llm

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml
data/outputs/: insights.csv
data/raw/: customers.csv  products.csv  purchases.csv
sql/: query.sql  script.sql
src/: 1_create_db.py  2_load_db.py  3_query.py  4_llm.py  main.py
