[project]
name = "analytics-engineering-with-llm"
version = "0.1.0"
description = "Engineering and Data Analytics Demo with LLM's."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 88
